# Chest-Xray-LISA

./: .gitignore  README.md  check_cuda.py  check_cuda.sh  error_lisa_install.txt  error_lisa_vindr-Copy1.txt  error_lisa_vindr.txt  error_lisa_vindr_debug.txt  experiment.py  install_flash.sh  loss_fn.py  merge_weights.sh  prepare_mimic.py  prepare_vindr.py  requirements.txt  result_install.txt  result_lisa_vindr.txt  result_lisa_vindr_debug.txt  sample_vindr.py  test.py  test.sh  train.py  train.sh  train_debug.sh  train_ds_original.py  train_new.py  train_no_ds.sh  train_text.py  train_text.sh  train_text_no_ds.py  train_text_no_ds.sh  train_vin.py  unzip.py
Medical-ChestXray-LMM/: .dockerignore  .gitignore  README.md  pyproject.toml
Medical-ChestXray-LMM/.docker/: Dockerfile
Medical-ChestXray-LMM/cli/docker_env/: after_docker.sh  build_image.sh  execute_container.sh  push_image.sh  remove_container.sh  remove_image.sh  run_container.sh  start_container.sh  stop_container.sh
Medical-ChestXray-LMM/cli/k8s_env/: create_pod.sh  create_pvc.sh  create_secret.sh  delete_pod.sh  execute_pod.sh  get_log_pod.sh  pod-storage.yaml  pod-vindr-medcxrlmm.yaml  pvc-storage.yaml  sync_local2pod.sh
Medical-ChestXray-LMM/cli/rsync/: rsync_download.sh  rsync_upload.sh  set_up_sshkey.sh
Medical-ChestXray-LMM/cli/train/lisa/: train_lisa.sh
Medical-ChestXray-LMM/src/dataloader_hub/dataloader_base/: dataset_base_generic.py
Medical-ChestXray-LMM/src/dataset_hub/CC3M/: CC3M.md
Medical-ChestXray-LMM/src/model_hub/: build_tokenizer.py  build_visual_encoder.py
model/: LISA.py  (+1 more)
(+206 files in other folders)
