[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medcxrlmm"
version = "1.0.0"
description = "Medical Chest X-ray Large Multimodal Model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers==4.46.0", 
    "tokenizers==0.20.1", 
    "peft==0.4.0", 
    "sentencepiece==0.2.0", 
    "accelerate==0.26.1", 
    "opencv-python==4.10.0.84",
    "tensorboard==2.16.2",
    "pyyaml==6.0.1",
    "dotmap==1.3.30",
    "numpy==1.26.4",
    "wandb==0.18.5",
    "deepspeed==0.15.2",
    "pre-commit==3.0.2",
]
